--- a/css.css
+++ b/css.css
@@ -1,89 +1,1 @@
-.ecomMB {
-  background-color: #FBF9FC;
-  position: relative;
-  left: 50%;
-  transform: translate(-50%);
-  height: 100px;
-  width: 375px;
-  display: flex;
-}
-.ecomMB .content-left {
-  margin: 10px 12px;
-}
-.ecomMB .content-img {
-  position: relative;
-  height: 80px;
-  width: 80px;
-}
-.ecomMB .content-img img {
-  width: 100%;
-  height: 100%;
-}
-.ecomMB .content-img .content-svg {
-  position: absolute;
-  bottom: 63px;
-  right: 0;
-}
-.ecomMB .content-img .content-svg-text {
-  font-weight: bold;
-  font-size: 10px;
-  line-height: 18px;
-  align-items: center;
-  text-align: center;
-  color: #ffffff;
-  position: absolute;
-  top: 0;
-  right: 2px;
-}
-.ecomMB .content-detail {
-  margin-top: 13px;
-  margin-right: 8px;
-}
-.ecomMB .content-detail h5 {
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 17px;
-  align-items: center;
-  color: #373737;
-}
-.ecomMB .content-price {
-  margin-top: 7px;
-  margin-bottom: 5px;
-  display: flex;
-}
-.ecomMB .content-price h5 {
-  margin-right: 2px;
-  font-size: 14px;
-  font-weight: normal;
-  line-height: 18px;
-  text-align: center;
-  color: #777777;
-}
-.ecomMB .content-price h4 {
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 18px;
-  text-align: center;
-  color: #e00000;
-}
-.ecomMB .content-brand {
-  margin-top: 5px;
-  margin-bottom: 5px;
-  display: flex;
-}
-.ecomMB .content-brand p {
-  font-size: 9px;
-  font-weight: 700;
-  line-height: 18px;
-  letter-spacing: 0em;
-  text-align: left;
-  color: #1c8ddc;
-  margin-right: 2px;
-}
-.ecomMB .content-brand span {
-  font-weight: normal;
-  font-size: 9px;
-  line-height: 18px;
-  align-items: center;
-  color: #a5a5a5;
-}
+@font-face{font-family:SFD-Medium;src:url(https://static.mediacdn.vn/web_font/SFD-Medium.woff2)}@font-face{font-family:SFD-SemiBold;src:url(https://static.mediacdn.vn/web_font/SFD-Bold.woff2)}@font-face{font-family:SFD-Bold;src:url(https://static.mediacdn.vn/web_font/SFD-Bold.woff2)}#aiservice-foryou a{text-decoration:none}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] h3{margin-bottom:15px;border-bottom:1px solid #d6dce2;box-sizing:border-box}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news-title{font-size:14px;line-height:140%;text-transform:uppercase;color:#555;font-family:SFD-Bold;position:relative;display:block}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news .list-nn{display:flex;flex-direction:column;list-style:none}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news .list-nn .nn-item{padding-bottom:12px;border-bottom:1px dashed #d6dce2;margin-bottom:12px}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news .list-nn .nn-item .item-gr{display:flex}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news .list-nn .nn-item.first-noticeable-news .item-gr .item-news{flex-direction:column}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news .list-nn .nn-item .item-gr .item-news{width:100%}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news .list-nn .nn-item .item-gr .item-news{display:flex;justify-content:space-between}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news .list-nn .nn-item.first-noticeable-news .item-gr .item-news .item-news-thumb{width:100%}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news .list-nn .nn-item .item-gr .item-news .item-news-thumb{display:block}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news .list-nn .nn-item .item-gr .item-news .item-news-thumb i{display:block;width:100%;padding-top:61.5%;position:relative;margin-bottom:10px;border-radius:4px;overflow:hidden}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news .list-nn .nn-item .item-gr .item-news .item-news-thumb i img{position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news .list-nn .nn-item.first-noticeable-news .item-gr .item-news h4{width:100%}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news .list-nn .nn-item.first-noticeable-news .item-gr .item-news h4 .item-news-title{font-family:SFD-SemiBold;display:-webkit-box;-webkit-line-clamp:3;-webkit-box-orient:vertical;overflow:hidden}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news .list-nn .nn-item .item-gr .item-news h4 .item-news-title{font-size:13px;line-height:140%;color:#555}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news .list-nn .nn-item{padding-bottom:12px;border-bottom:1px dashed #d6dce2;margin-bottom:12px}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news .list-nn .nn-item .item-gr{display:flex}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news .list-nn .nn-item .item-gr .item-news{width:100%}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news .list-nn .nn-item .item-gr .item-news{display:flex;justify-content:space-between}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news .list-nn .nn-item .item-gr .item-news h4{display:block;width:64%}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news .list-nn .nn-item .item-gr .item-news h4 .item-news-title{font-size:13px;line-height:140%;color:#555;font-family:SFD-Medium}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news .list-nn .nn-item .item-gr .item-news h4 .item-news-title{font-size:14px;line-height:140%;color:#555;font-family:SFD-Medium;display:-webkit-box;-webkit-line-clamp:3;-webkit-box-orient:vertical;overflow:hidden}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news .list-nn .nn-item .item-gr .item-news .item-news-thumb{display:block;width:32%}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news .list-nn .nn-item .item-gr .item-news .item-news-thumb i{display:block;width:100%;padding-top:61.5%;position:relative;margin-bottom:10px;border-radius:4px;overflow:hidden}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news .list-nn .nn-item .item-gr .item-news .item-news-thumb i img{position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news{background:#f1f1f1;box-sizing:border-box;border-radius:10px}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news .list-nn .nn-item{border-bottom:unset;width:260px}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news .list-nn .nn-item .item-gr .item-news{flex-direction:column;width:260px;border-radius:8px;overflow:hidden}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news .list-nn .nn-item .item-gr .item-news .item-news-thumb{width:260px;height:163px}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news .list-nn .nn-item .item-gr .item-news .item-news-thumb img{width:260px;display:block}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news .list-nn .nn-item .item-gr .item-news{background:#fff}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news .list-nn{flex-direction:row}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news .list-nn .nn-item{width:260px!important;margin-bottom:unset;padding-bottom:unset}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news{padding:21px 0 21px 0!important}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] h3{border-bottom:unset}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news-title{display:flex;flex-wrap:nowrap;align-items:center;font-weight:700;font-size:22px;color:#111}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news--reload{width:125px;height:31px;background:#e5e5e5;border-radius:8px;display:flex;font-weight:600;font-size:14px;align-items:center;flex-wrap:nowrap;color:#555;padding:0 10px 0 10px;margin-right:20px}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news--reload::before{content:"";background:url(https://static.mediacdn.vn/kenh14/web_images/icon_reload.svg);width:20px;height:15px;display:block;margin-right:5px}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable_top{display:flex;flex-wrap:nowrap;justify-content:space-between;padding-left:20px}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news{width:700px;position:relative;background-position:100% 100%;background-color:#f1f1f1;border:1px solid rgba(0,0,0,.1);box-sizing:border-box;border-radius:10px}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news .genkSwiper .swiper-button-next,#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news .genkSwiper .swiper-button-prev{position:absolute;top:65px!important;width:30px!important;height:80px!important;z-index:20;cursor:pointer}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news .genkSwiper .swiper-button-next{background:url(https://kenh14cdn.com/web_images/sprite-k14.20.png) -82px -96px no-repeat!important;background-color:rgba(251,108,39,.9)!important;border-top-left-radius:3px;-webkit-border-top-left-radius:3px;-moz-border-radius-topleft:3px;border-bottom-left-radius:3px;-webkit-border-bottom-left-radius:3px;-moz-border-radius-bottomleft:3px;background-size:400px!important}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news .genkSwiper .swiper-button-next:after,#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news .genkSwiper .swiper-button-prev:after{content:""}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news .genkSwiper .swiper-button-prev{background:url(https://kenh14cdn.com/web_images/sprite-k14.20.png) -50px -96px no-repeat!important;background-color:rgba(251,108,39,.9)!important;border-top-right-radius:3px;-webkit-border-top-right-radius:3px;-moz-border-radius-topright:3px;border-bottom-right-radius:3px;-webkit-border-bottom-right-radius:3px;-moz-border-radius-bottomright:3px;background-size:400px!important}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news .genkSwiper{width:calc(100% - 20px);padding-left:20px}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news .list-nn .nn-item:last-child{margin-right:0}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news .list-nn .swiper-slide--lastchild{width:0!important;margin-right:0!important}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news .list-nn .nn-item .item-gr .item-news h4{height:91px;padding:10px 15px 12px 15px;text-align:left;overflow:hidden;width:230px}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news .list-nn .nn-item .item-gr .item-news h4 .item-news-title{font-style:normal;line-height:140%;color:#111;font-family:SFD-SemiBold;display:-webkit-box;-webkit-line-clamp:4;-webkit-box-orient:vertical;overflow:hidden;font-weight:600;font-size:16px}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news-image{width:28px;height:28px}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news-title{margin-left:8px}.gk_home20-wrapper .gknews_box[type=newest] h3{border-bottom:unset;display:flex}#aiservice-foryou .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news .genkSwiper .swiper-button-prev.swiper-button-disabled,#aiservice-foryou .swiper-button-next.swiper-button-disabled .gk_home20-wrapper .gknews_box[type=newest] .noticeable-news .genkSwiper{background-color:#333!important}
